--- a/docs/10.更多/01.面试.md
+++ b/docs/10.更多/01.面试.md
@@ -1,9 +1,9 @@
 ---
 title: 面试
 date: 2020-09-07 16:44:56
-permalink: /pages/3713c6/
-categories: 
-  - more
-tags: 
-  - 
+permalink: /more/3713c6/
+categories:
+  - 更多
+tags:
+  -
 ---
