--- a/docs/10.读书笔记/10.JavaScript高级程序设计/01.第1章 什么是JavaScript.md
+++ b/docs/10.读书笔记/10.JavaScript高级程序设计/01.第1章 什么是JavaScript.md
@@ -4,7 +4,7 @@ date: 2020-09-14 17:35:44
 permalink: /pages/5bd01e/
 categories:
   - 读书笔记
-  - JavaScript高级程序设计d
+  - JavaScript高级程序设计
 tags:
   - 红宝书
 ---
