--- a/docs/10.读书笔记/10.JavaScript高级程序设计/05.第5章 基本引用类型.md
+++ b/docs/10.读书笔记/10.JavaScript高级程序设计/05.第5章 基本引用类型.md
@@ -8,3 +8,17 @@ categories:
 tags:
   -
 ---
+
+## Date
+
+## 正则
+
+## 原始值包装类型
+
+为了方便操作原始值,有 4 种特殊的引用类型
+
+- `Boolean`
+- `String`
+- `Number`
+- `Symbol`
+  每当原始值使用方法或属性时，后台都将创建一个响应的包装类型的对象，暴露出操作原始值的方法
