--- a/docs/02.前端/01.JavaScript进阶/01.变量和类型.md
+++ b/docs/02.前端/01.JavaScript进阶/01.变量和类型.md
@@ -2,9 +2,27 @@
 title: 变量和类型
 date: 2020-09-13 10:41:35
 permalink: /pages/7264d1/
-categories: 
+categories:
   - 前端
   - JavaScript进阶
-tags: 
-  - 
+tags:
+  -
 ---
+
+## F&Q
+
+1. JavaScript 中的数据类型
+
+![](https://cdn.jsdelivr.net/gh/Zeng-Zhe/image_store/blog/20200922164130.png)
+
+2. JavaScript 对象的底层数据结构是什么
+
+3. Symbol 类型在实际开发中的应用、可手动实现一个简单的 Symbol
+
+4. JavaScript 中的变量在内存中的具体存储形式
+5. 基本类型对应的内置对象，以及他们之间的装箱拆箱操作
+6. 理解值类型和引用类型
+7. null 和 undefined 的区别
+8. 至少可以说出三种判断 JavaScript 数据类型的方式，以及他们的优缺点，如何准确的判断数组类型
+9. 可能发生隐式类型转换的场景以及转换原则，应如何避免或巧妙应用
+10. 出现小数精度丢失的原因，JavaScript 可以存储的最大数字、最大安全数字，JavaScript 处理大数字的方法、避免精度丢失的方法
