--- a/docs/15.JavaScript进阶/01.类型/08.类型的转换.md
+++ b/docs/15.JavaScript进阶/01.类型/08.类型的转换.md
@@ -8,3 +8,113 @@ categories:
 tags:
   -
 ---
+
+::: center
+
+## 前言
+
+:::
+JavaScript 作为一门弱类型语言，类型转换发生的非常频繁，大部分运算发生前都会进行转换。如果没有理解类型转换，容易造成代码的判断失误
+
+::: center
+
+## 基本类型之间的转换
+
+:::
+
+### 原始值 to 布尔
+
+直接调用`Boolean`构造函数,或者使用`!!`双非运算符
+
+<<< @/codeSnippets/js/类型转换.js#boolean
+
+### 原始值 to 数字
+
+<<< @/codeSnippets/js/类型转换.js#number
+
+### 原始值 to 字符
+
+使用`String`构造函数，底层是`toString`，但是对`null`,`undefined`,`symbols`有特殊处理
+<<< @/codeSnippets/js/类型转换.js#string
+
+### 原始值 to 对象(显式装箱)
+
+转换成对象非常简单，调用`String()`,`Number()`,`Boolean()`就能转换成包装对象
+
+或者直接使用`Object()`构造函数显式装箱
+<<< @/codeSnippets/js/类型转换.js#object
+
+### 对象 to 布尔
+
+任何对象转换为布尔值时都为`true`，包括`函数`，`空对象`，`包装对象`
+::: center
+
+## 理解隐式类型转换
+
+:::
+隐式转换主要发生在下列场景
+
+- 不同类型的数据进行了一定的操作
+
+  例如`比较`，`数学运算`，`逻辑运算`，`字符串拼接`
+
+- 操作符
+
+不同类型的数据是无法进行这类操作的，但是符合 JavaScript 的语法，所以就会产生`冲突`，而解决冲突，就需要类型转换
+
+| 操作符                   | 偏向性     |
+| ------------------------ | ---------- |
+| ``模板字符串 | 字符      |
+| 四则运算(除了+)          | 数值       |
+| 逻辑运算(&&,`||` ,!)     | 布尔值     |
+| `+`                      | 字符，数值 |
+| 比较运算(排除`==`，`!=`) | 字符，数值 |
+| ===，!==                 |            |
+| == !=                    | 引用，数值 |
+
+::: tip
+
+`===`严格相等不会触发隐式转换
+
+:::
+
+## 装箱转换
+
+为了方便操作原始值，JavaScript 提供了和基本类型对应的特殊引用类型。装箱操作就是`将原始类型转换成对应的引用类型`
+::: theorem 《JavaScript 高级程序设计》
+每当用到某个原始值的方法或属性时，后台会创建一个相应原始包装类型的对象，从而暴露出操作原始值的各种方法
+:::
+
+```js
+let str1 = 'text';
+let str2 = str1.substring(2);
+```
+
+上面代码中，`str1`是一个原始值字符变量，第二行在`str1`调用了`substring`方法，原始值是不具备这些方法的，产生了`冲突`，为了解决`冲突`,后台进行了`装箱操作`，会执行下面 3 步
+
+1. 创建一个`String`类型的实例
+2. 调用实例上的方法
+3. 销毁
+
+可以想象成下列代码
+
+```js
+let str1 = 'text';
+let temp = new String(str1);
+let str2 = temp.substring(2);
+temp = null;
+```
+
+## 参考
+
+[JavaScript 类型转换](https://juejin.im/post/6844904122508918798)
+
+[JavaScript 中的相等性判断](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Equality_comparisons_and_sameness)
+
+[重学前端](https://time.geekbang.org/column/article/78884)
+
+[JavaScript《高级程序设计》](https://www.ituring.com.cn/book/2472)
+
+```
+
+```
