--- a/docs/15.JavaScript进阶/01.类型/11.判断数据类型.md
+++ b/docs/15.JavaScript进阶/01.类型/11.判断数据类型.md
@@ -250,6 +250,18 @@ function isBoolean(obj) {
 }
 ```
 
+### isNULL 和 isUndefined
+
+```js
+function isNull(obj) {
+  return obj === null;
+}
+
+function isUndefined(obj) {
+  return obj === void 0;
+}
+```
+
 ::: center
 
 ## 总结
@@ -263,3 +275,7 @@ function isBoolean(obj) {
 | ---- | ------------------------ | -------------------------------------- | ------------- |
 | 优势 | 判断出基本类型和函数     | 检测所有类型                           | 检测所有类型  |
 | 不足 | 无法判断 null 和复杂类型 | IE6 以下 undefined 和 null 均为 object | 无法跨 iframe |
+
+- underscore 中,包装类型和大部分内置对象都是通过`Object.prototype.toString()`完成判断的。
+
+  对于常用的函数，数组，对象等判断使用原生方法或`typeof`
