--- a/docs/15.JavaScript进阶/01.类型/01.null和undefined.md
+++ b/docs/15.JavaScript进阶/01.类型/01.null和undefined.md
@@ -67,7 +67,10 @@ undefined == null; //true
 undefined === null; //false
 ```
 
-既然在代码层面，两者的表现几乎一样，那为什么要同时设置这两个值呢？这和历史原因有关
+既然在代码层面，两者的表现几乎一样，那为什么要同时设置这两个值呢？
+
+## 历史原因
+
 ::: theorem 历史原因
 在 JavaScript 诞生时，只设置了`null`表示无，在第一版的 JavaScript 中，null 是一个对象，转换为数字时，变为 0。
 这也是为什么`typeof`null 时，返回的是 object，为了兼容以前的代码
