--- a/docs/15.JavaScript进阶/01.类型/08.类型的转换.md
+++ b/docs/15.JavaScript进阶/01.类型/08.类型的转换.md
@@ -16,11 +16,23 @@ tags:
 :::
 JavaScript 作为一门弱类型语言，类型转换发生的非常频繁，大部分运算发生前都会进行转换。如果没有理解类型转换，容易造成代码的判断失误
 
+ES6 之前，共有 6 种数据类型
+
+- undefined
+- null
+- boolean
+- string
+- number
+- object
+
 ::: center
 
-## 基本类型之间的转换
+## 显式转换
 
 :::
+![一张图表示显式类型转换](https://cdn.jsdelivr.net/gh/Zeng-Zhe/image_store/blog/20200925160008.png)
+
+<!-- ![一张图表示显式类型转换](https://cdn.jsdelivr.net/gh/Zeng-Zhe/image_store/blog/20200925155625.png) -->
 
 ### 原始值 to 布尔
 
@@ -30,11 +42,29 @@ JavaScript 作为一门弱类型语言，类型转换发生的非常频繁，大
 
 ### 原始值 to 数字
 
+使用`Number`构造函数转换，如果无法转换，返回`NaN`
+如果有参数，调用`ToNumber()`。这是底层的方法。下面是相对应的结果表：
+
+| 类型      | 结果                   |
+| --------- | ---------------------- |
+| undefined | NaN                    |
+| null      | 0                      |
+| Boolean   | true 为 1，false 为 0  |
+| Number    | 返回一个副本           |
+| String    | 内容较多，看下面的例子 |
+
 <<< @/codeSnippets/js/类型转换.js#number
 
 ### 原始值 to 字符
 
-使用`String`构造函数，底层是`toString`，但是对`null`,`undefined`,`symbols`有特殊处理
+使用`String`构造函数，底层是`ToString`，
+| 类型 | 结果 |
+| --------- | ---------------------- |
+| undefined | 'undefined' |
+| null | 'null' |
+| Boolean | true 为 1，false 为 0 |
+| Number | 内容较多，看下面的例子 |
+| String | 返回一个副本 |
 <<< @/codeSnippets/js/类型转换.js#string
 
 ### 原始值 to 对象(显式装箱)
@@ -42,12 +72,35 @@ JavaScript 作为一门弱类型语言，类型转换发生的非常频繁，大
 转换成对象非常简单，调用`String()`,`Number()`,`Boolean()`就能转换成包装对象
 
 或者直接使用`Object()`构造函数显式装箱
+
 <<< @/codeSnippets/js/类型转换.js#object
 
 ### 对象 to 布尔
 
 任何对象转换为布尔值时都为`true`，包括`函数`，`空对象`，`包装对象`
-::: center
+
+### 对象 to 数字和字符串(拆箱转换)
+
+对象转换成数字和字符串都是通过`转换对象`的一个方法完成的，js 提供了 2 个方法来进行转换
+
+- `toString`
+- `valueOf`
+
+**对象 to 字符串**
+
+```js
+primValue = ToPrimitive(input, string);
+ToString(primValue);
+```
+
+**对象 to 数字**
+
+```js
+primValue = ToPrimitive(input, number);
+ToNumber(primValue);
+```
+
+`ToPrimitive`的作用是将对象转变成一个对应的基本类型的值,随后执行`ToString`，`ToNumber`转换成字符串/数字类型
 
 ## 理解隐式类型转换
 
