--- a/docs/100.更多/01.面试.md
+++ b/docs/100.更多/01.面试.md
@@ -7,3 +7,36 @@ categories:
 tags:
   -
 ---
+
+::: theorem Q&A
+
+**Q:记录面试题的意义**
+
+A:学习时通过面试题抓住重点。通过每日学习提升自己，而不是背面试题
+
+Q:**该如何学习**
+
+A:这里记录的都是我自己写出来的答案，如果有不懂的，学习后用自己的话总结下来
+
+**Q:面试题来自哪里？**
+
+A:大部分来自于开源项目`前端面试每日 3+1`
+::: right
+前往 [前端面试每日 3+1](https://zh.wikipedia.org/wiki/%E7%89%9B%E9%A1%BF%E8%BF%90%E5%8A%A8%E5%AE%9A%E5%BE%8B)
+:::
+
+<feInterview></feInterview>
+
+## HTML
+
+### 写一个布局，满足当页面滚动时，左侧固定不动，右侧的最小高度与左侧一样
+
+## CSS
+
+### 伪类选择器和伪元素选择器有什么区别
+
+## JavaScript
+
+### 接口请求时需要做哪些安全处理？怎么做
+
+## 软技能
