--- a/docs/15.JavaScript进阶/02.原型和原型链/02.原型和原型链.md
+++ b/docs/15.JavaScript进阶/02.原型和原型链/02.原型和原型链.md
@@ -9,14 +9,26 @@ tags:
   -
 ---
 
-## 构造函数
+## 理解原型
 
-为了区分普通函数，一般是首字母大写
+每一个函数都有一个`prototype`指针，指向一个`原型对象`。
 
-```js
-function Person() {}
-```
+默认情况下，`原型对象`有一个`constructor`属性，返回相关联的构造函数
 
-## prototype(原型)
+<<< @/codeSnippets/红宝书/原型.js#01
 
-每个函数都有一个`prototype`属性，这个属性指向了一个对象，就是这个函数的`构造函数的的原型`
+### `__proto__`
+
+每一个对象都拥有的属性，是大部分浏览器支持的非标准方法。可以理解成使用 obj.`__proto__`时，相当于使用`Object.getPrototypeOf(obj)`
+
+目前为止的关系图
+
+![关系图](https://cdn.jsdelivr.net/gh/Zeng-Zhe/image_store/blog/20200927144246.png)
+
+## 实例对象
+
+当读取实例对象的属性时，如果没有找到，会进入`实例对象`的原型。如果还找不到，就会进入原型的原型，直到最顶层结束
+
+<<< @/codeSnippets/红宝书/原型.js#02
+
+这个例子中，给`原型对象`添加了`name`属性，当`实例对象`访问`name`属性时，找不到就会从原型上查找，最终找到了 name 属性，结果为`abc`
