--- a/docs/_posts/资源.md
+++ b/docs/_posts/资源.md
@@ -33,6 +33,19 @@ article: false
 
 :::
 
+::: cardList
+
+```yaml
+- name: 优秀个人独立博客收录
+  desc: 在文字之间找到我
+  avatar: https://seekbetter.me/favicon.ico # 可选
+  link: https://seekbetter.me/ # 可选
+  bgColor: '#6DD400' # 可选，默认var(--bodyBg)。颜色值有#号时请添加单引号
+  textColor: '#fff' # 可选，默认var(--textColor)
+```
+
+:::
+
 ## 好文
 
 ::: tip
