--- a/docs/15.JavaScript进阶/02.原型和原型链/02.原型和原型链.md
+++ b/docs/15.JavaScript进阶/02.原型和原型链/02.原型和原型链.md
@@ -9,26 +9,53 @@ tags:
   -
 ---
 
-## 理解原型
+## prototype(原型对象)
 
-每一个函数都有一个`prototype`指针，指向一个`原型对象`。
-
-默认情况下，`原型对象`有一个`constructor`属性，返回相关联的构造函数
+每一个函数都有`prototype`属性，指向一个`对象`。这个对象就是调用构造函数生成的实例对象的原型
 
 <<< @/codeSnippets/红宝书/原型.js#01
 
-### `__proto__`
-
-每一个对象都拥有的属性，是大部分浏览器支持的非标准方法。可以理解成使用 obj.`__proto__`时，相当于使用`Object.getPrototypeOf(obj)`
-
-目前为止的关系图
-
-![关系图](https://cdn.jsdelivr.net/gh/Zeng-Zhe/image_store/blog/20200927144246.png)
+![关系图](https://cdn.jsdelivr.net/gh/Zeng-Zhe/image_store/blog/20200928112638.png)
 
 ## 实例对象
 
-当读取实例对象的属性时，如果没有找到，会进入`实例对象`的原型。如果还找不到，就会进入原型的原型，直到最顶层结束
+当调用 `构造函数`创建新的实例时，这个实例内部的`[[prototype]]`属性就会被赋值为构造函数的原型对象
 
 <<< @/codeSnippets/红宝书/原型.js#02
 
+![关系图](https://cdn.jsdelivr.net/gh/Zeng-Zhe/image_store/blog/20200927144246.png)
+
+## 实例对象的原型
+
+当读取实例对象的属性时，如果没有找到，会进入`实例对象`的原型。如果还找不到，就会进入原型的原型，直到最顶层结束
+
+<<< @/codeSnippets/红宝书/原型.js#03
+
 这个例子中，给`原型对象`添加了`name`属性，当`实例对象`访问`name`属性时，找不到就会从原型上查找，最终找到了 name 属性，结果为`abc`
+
+如果实例对象的原型也没有找到呢？原型的原型呢？
+
+## 原型的原型
+
+原型也是一个对象，首先创建一个对象
+
+::: tip 注意
+使用对象字面量和构造函数创建对象，两者等价
+:::
+<<< @/codeSnippets/红宝书/原型.js#04
+
+上面的例子中，obj 是`Object`构造函数生成的`实例对象`,obj 的原型被赋值成`Object.prototype`
+
+![关系图](https://cdn.jsdelivr.net/gh/Zeng-Zhe/image_store/blog/20200928114750.png)
+
+## 原型链
+
+那么，`Object.prototype`的原型呢，是`null`
+
+<<< @/codeSnippets/红宝书/原型.js#05
+
+表示`Object.prototype`是最顶层了，如果这里还没有查询到值。那么就应该停止了
+
+红色部分就是`原型链`
+
+![关系图](https://cdn.jsdelivr.net/gh/Zeng-Zhe/image_store/blog/20200928140605.png)
