--- a/docs/15.JavaScript进阶/02.原型和原型链/05.new操作符.md
+++ b/docs/15.JavaScript进阶/02.原型和原型链/05.new操作符.md
@@ -8,3 +8,27 @@ categories:
 tags:
   -
 ---
+
+## 介绍
+
+> 创建一个用户定义的对象类型的实例，或具有构造函数的内置对象的实例
+
+## new 的作用
+
+1. 创建一个新对象`{}`
+2. 将对象内部的`[[prototype]]`原型属性赋值为构造函数的`prototype`
+3. 构造函数内部的`this`指向为这个新对象
+4. 执行构造函数
+5. 如果构造函数返回`非空对象`，则返回该对象，否则返回创建的对象
+
+<<< @/codeSnippets/js/new 操作符.js#01
+上面的例子可以看到，
+
+- 执行了构造函数，将 `name` 属性赋值到了实例对象中
+- 实例对象的原型被设置到了构造函数的原型对象`Test.prototype`,因此可以访问`sayName`方法
+
+<<< @/codeSnippets/js/new 操作符.js#02
+
+这次在构造函数中返回一个 name 为`abc`的对象。没有返回创建的对象，也就没有和`Test.prototype`建立联系
+
+## 模拟实现 new
