--- a/docs/100.更多/01.面试.md
+++ b/docs/100.更多/01.面试.md
@@ -27,16 +27,40 @@ A:大部分来自于开源项目`前端面试每日 3+1`
 
 <feInterview></feInterview>
 
+::: center
+
 ## HTML
+
+:::
+
+### 请说说你在写布局时对于浏览器兼容性的感受或总结
 
 ### 写一个布局，满足当页面滚动时，左侧固定不动，右侧的最小高度与左侧一样
 
+::: center
+
 ## CSS
 
-### 伪类选择器和伪元素选择器有什么区别
+:::
+
+### 伪类选择器和伪元素选择器有什么区别 <Badge text="不知道" type="error"/>
+
+### 如何实现 gif 动图的暂停和播放 <Badge text="不知道" type="error"/>
+
+:::center
 
 ## JavaScript
 
+:::
+
+### 数组元素全倒排列并去重
+
 ### 接口请求时需要做哪些安全处理？怎么做
 
+::: center
+
 ## 软技能
+
+:::
+
+### url 的长度限制是多少呢？为什么会有这种限制 <Badge text="不知道" type="error"/>
