--- a/docs/100.更多/01.面试.md
+++ b/docs/100.更多/01.面试.md
@@ -37,6 +37,8 @@ A:大部分来自于开源项目`前端面试每日 3+1`
 
 ### 写一个布局，满足当页面滚动时，左侧固定不动，右侧的最小高度与左侧一样
 
+### html 页面中如何实现 gif 图片重新播放
+
 ::: center
 
 ## CSS
@@ -46,6 +48,8 @@ A:大部分来自于开源项目`前端面试每日 3+1`
 ### 伪类选择器和伪元素选择器有什么区别 <Badge text="不知道" type="error"/>
 
 ### 如何实现 gif 动图的暂停和播放 <Badge text="不知道" type="error"/>
+
+### 简述下 Flex 的容器和项目的概念
 
 :::center
 
@@ -57,6 +61,8 @@ A:大部分来自于开源项目`前端面试每日 3+1`
 
 ### 接口请求时需要做哪些安全处理？怎么做
 
+### 函数的调用栈是怎么工作的
+
 ::: center
 
 ## 软技能
@@ -64,3 +70,5 @@ A:大部分来自于开源项目`前端面试每日 3+1`
 :::
 
 ### url 的长度限制是多少呢？为什么会有这种限制 <Badge text="不知道" type="error"/>
+
+### 项目工作量的评估中，“人天”指的是什么？它有什么作用
