--- a/docs/100.更多/04.博客建设/01.语法和容器.md
+++ b/docs/100.更多/04.博客建设/01.语法和容器.md
@@ -1,5 +1,5 @@
 ---
-title: 配置
+title: 语法和容器
 date: 2020-09-25 09:57:35
 permalink: /pages/c62b85/
 categories:
@@ -9,10 +9,17 @@ tags:
 ---
 
 ::: theorem
-在写作过程中，经常翻阅`vuepress`和主题`vdoing`的文档配置，这里简单的记录下常用的配置，
+在写作过程中，经常翻阅`vuepress`和主题`vdoing`的文档配置，这里简单的记录下常用的配置，以及`markdown`的语法
 :::
 
+## 语法
+
 ## MarkDown 容器
+
+::: theorem 容器
+`vuepress`专属语法，通常由三个`:`冒号组成，主题`vdoing`扩展了一部分
+
+:::
 
 ### 提示
 
@@ -97,3 +104,7 @@ console.log('这是一个详情块');
 ::: right
 来自 [维基百科](https://zh.wikipedia.org/wiki/%E7%89%9B%E9%A1%BF%E8%BF%90%E5%8A%A8%E5%AE%9A%E5%BE%8B)
 :::
+
+## 扩展
+
+### 生成目录
