--- a/docs/15.JavaScript进阶/03.作用域和闭包/01.作用域和作用域链.md
+++ b/docs/15.JavaScript进阶/03.作用域和闭包/01.作用域和作用域链.md
@@ -9,9 +9,14 @@ tags:
   -
 ---
 
+::: tip 注意
+这篇文章更像是对`《你不知道的JavaScript》`第一章的总结。因为小黄书写得太好了
+:::
+
 ## 作用域(Scope)
 
 > 作用域是一套规则，用于确定在何处以及如何查找变量(标识符)
+> 也就是控制代码对变量，函数，对象的访问权限
 > JavaScript 使用了词法作用域，也就是静态作用域
 
 ## 词法作用域
@@ -22,13 +27,15 @@ tags:
 
 - 动态作用域
 
-  函数的作用域在调用的时候才决定
+  和词法作用域相反的是动态作用域，函数的作用域在调用的时候才决定
 
 例子:
 
-<<< @/codeSnippets/js/作用域.js#1
+<<< @/codeSnippets/js/作用域.js#01
 
-## 函数作用域和块作用域
+![作用域](https://cdn.jsdelivr.net/gh/Zeng-Zhe/image_store/blog/20200930143903.png)
+
+首先调用 bar()函数，在`bar`函数内部调用`foo()`，会在 `foo 作用域(2)`内寻找`value`。找不到后向上一级寻找。而`JavaScript`采用的静态作用域。函数的作用域在声明时就确定了。所以上一级是`全局作用域(1)`。在这里找到了`value`。
 
 ## 作用域嵌套(作用域链)
 
