--- a/docs/15.JavaScript进阶/03.作用域和闭包/07.执行上下文.md
+++ b/docs/15.JavaScript进阶/03.作用域和闭包/07.执行上下文.md
@@ -11,8 +11,83 @@ tags:
 
 ## 执行上下文
 
+在`JavaScript`中，执行上下文分为三种
+
+1. 全局上下文
+
+   只有一个。在浏览器中是`window`
+
+2. 函数执行上下文
+
+   在函数被`调用`时创建
+
+3. eval 执行上下文
+
+### 特点
+
+- 全局上下文只有一个，且最先被执行
+- 函数每调用一次就会产生一个新的执行环节
+- 单线程，同步执行
+
+### 如何管理多个上下文
+
+`JavaScript`是单线程。只能一个个执行，那是如何管理这些上下文的？
+
+### 执行上下文栈
+
+`JavaScript`使用了执行上下文栈(Execution context stack,ECS)来管理上下文
+
+**特点**:先进后出(LIFO)
+
+`JavaScript`在执行处，最先遇到的就是全局上下文。初始化的时候就会向`执行上下文`中压入一个全局上下文。只有整个应用程序结束时。`执行上下文`才会被清空。所以`执行上下文`底部永远有一个`全局上下文`
+
+每当函数被调用时。引擎都会为改函数创建一个新的`函数执行上下文`压入`ECS`中。
+
+当栈顶的函数执行完毕是。该函数对应的`函数执行上下文`就会被弹出
+
+示例：
+
+<<< @/codeSnippets/js/作用域.js#02
+
+![执行上下文](https://cdn.jsdelivr.net/gh/Zeng-Zhe/image_store/blog/20200930152538.png)
+
+首先将`全局上下文`压入`执行ECS`中。执行`first()`函数，创建一个`函数执行上下文`压入到`执行ECS`中。
+
+随后调用`second()`。再次创建一个`函数执行上下文`。`second`执行完毕后。从`执行ECS`中弹出。随后`first`函数也执行完毕。再次弹出
+
+## 重要属性
+
+在创建一个执行上下文后。拥有 3 个重要属性。分别是
+
+- 变量对象
+- 作用域链
+- this
+
 ## 变量对象
 
-## 作用域链
+变量对象存储了上下文中定义的变量和声明
 
-## 活动对象
+### 全局上下文
+
+### 函数上下文
+
+变量对象存储了执行上下文的变量和声明，在函数上下文中。还多了一个`arguments(函数参数列表)`
+
+#### 执行过程
+
+- 创建阶段
+- 执行阶段
+
+**创建阶段**
+
+此时还没有执行代码
+
+- arguments 声明
+
+- 函数声明
+
+- 变量声明
+
+**执行阶段**
+
+此时会按照顺序执行代码
