--- a/docs/_posts/资源.md
+++ b/docs/_posts/资源.md
@@ -60,3 +60,11 @@ article: false
   > 一些学习资源
 
 ## 实用网站
+
+### 软件/应用
+
+- [小众软件](https://www.appinn.com/)
+
+- [果核剥壳](https://www.ghpym.com/)
+
+### CSS
