--- a/docs/100.更多/01.面试.md
+++ b/docs/100.更多/01.面试.md
@@ -39,6 +39,8 @@ A:大部分来自于开源项目`前端面试每日 3+1`
 
 ### html 页面中如何实现 gif 图片重新播放
 
+### 说说你对制表符的理解，它有什么作用
+
 ::: center
 
 ## CSS
@@ -50,6 +52,8 @@ A:大部分来自于开源项目`前端面试每日 3+1`
 ### 如何实现 gif 动图的暂停和播放 <Badge text="不知道" type="error"/>
 
 ### 简述下 Flex 的容器和项目的概念
+
+### 如何清除li列表的符号，改成图片背景
 
 :::center
 
@@ -63,6 +67,8 @@ A:大部分来自于开源项目`前端面试每日 3+1`
 
 ### 函数的调用栈是怎么工作的
 
+### new Function有什么应用场景
+
 ::: center
 
 ## 软技能
@@ -72,3 +78,5 @@ A:大部分来自于开源项目`前端面试每日 3+1`
 ### url 的长度限制是多少呢？为什么会有这种限制 <Badge text="不知道" type="error"/>
 
 ### 项目工作量的评估中，“人天”指的是什么？它有什么作用
+
+### 当团队有人遇到能力边界时，你做为他的主管你该怎么办
