--- a/docs/35.underscore源码分析/01.架构设计.md
+++ b/docs/35.underscore源码分析/01.架构设计.md
@@ -8,9 +8,42 @@ tags:
   -
 ---
 
-## 立即执行函数
+## 使用立即执行函数
 
 `underscore`通过立即执行函数来隔离业务逻辑。使用立即执行函数有以下目的：
 
 1. 避免全局污染
 2. 保护隐私
+
+<<< @\codeSnippets\underscore\架构设计.js#01
+
+## 运行环境判断
+
+underscore 既能用于浏览器环境。也能用于服务器环境。根据不同的环境。underscore 将自己挂载点不同的全局环境上
+
+### window or self
+
+在浏览器中，全局对象一般是`window`对象。但是这里用到的`self`。这是因为 self 在浏览器中就是`window`对象。并且还能表示不具有窗口的上下文环境。例如`web worker`
+
+## 松弛绑定
+
+默认情况下，underscore 将自己保存在`_`全局对象上。对于其他使用`_`全局对象的库来说。这样就有了冲突。underscore 将原来的`_`对象保存了下来。并且可以通过`_`.noConflict()`重命名对象。避免冲突
+
+## 对局部变量的处理
+
+underscore 中也使用了许多原生的方法。underscore 会使用局部变量保存这些方法。这样做有两个好处
+
+1. 在后续使用中。避免书写冗长的代码
+2. 减少访问深度。对性能有一定提升
+
+## 对 undefined 的处理
+
+在 JavaScript 中。`undefined`是一个全局变量。ES6 之后全局作用域无法被修改。局部作用域仍然可以被赋值。因此直接使用`undefined`是有风险的
+
+### 解决方法
+
+1. 使用`void 0`
+   void 运算符总是会返回`undefined`。而表达式为`0`时开销最小。某些代码压缩工具就是这样做的。为什么不直接使用呢？
+
+2. 对 IIFE 函数的形参不赋值
+   函数的参数如果没有传递参数时。则为安全的`undefined`
