--- a/docs/100.更多/01.面试.md
+++ b/docs/100.更多/01.面试.md
@@ -41,6 +41,31 @@ A:大部分来自于开源项目`前端面试每日 3+1`
 
 ### 说说你对制表符的理解，它有什么作用
 
+### 请使用一个div写出有三条横线的小图标
+
+::: demo 上下两条横线由`border`设置。中间的横线是设置的高度。将`background-clip`设置为`content-box`。也就是中间横线的高度。再用`padding`调整间距即可
+
+```html
+<template>
+  <div class="menu"></div>
+</template>
+
+<style>
+.menu {
+  margin:0 auto;
+  width: 30px;
+  height: 5px;
+  border-top: 5px solid red;
+  border-bottom: 5px solid red;
+  background-color: red;
+  padding: 5px 0;
+  background-clip: content-box;
+}
+</style>
+
+```
+
+:::
 ::: center
 
 ## CSS
@@ -54,6 +79,8 @@ A:大部分来自于开源项目`前端面试每日 3+1`
 ### 简述下 Flex 的容器和项目的概念
 
 ### 如何清除li列表的符号，改成图片背景
+
+### 请解释下float的工作原理
 
 :::center
 
@@ -69,6 +96,9 @@ A:大部分来自于开源项目`前端面试每日 3+1`
 
 ### new Function有什么应用场景
 
+### 写一个方法判断一组数字是连值 <Badge text="熟悉" type="tip"/>
+
+<<< @\codeSnippets\3+1面试.js#01
 ::: center
 
 ## 软技能
@@ -80,3 +110,11 @@ A:大部分来自于开源项目`前端面试每日 3+1`
 ### 项目工作量的评估中，“人天”指的是什么？它有什么作用
 
 ### 当团队有人遇到能力边界时，你做为他的主管你该怎么办
+
+### 你有看过哪些框架或者类库的源码吗？通过看源码可以收获什么
+
+- underscore
+- jquery(只看了一点)
+- vue(没开懂)
+
+我认为通过阅读源码。一是可以提高自己的内功。二是了解了框架或库的原理后。使用时更加轻松。遇到问题排查起来更快
