--- a/docs/15.JavaScript进阶/03.作用域和闭包/01.执行上下文栈.md
+++ b/docs/15.JavaScript进阶/03.作用域和闭包/01.执行上下文栈.md
@@ -1,5 +1,5 @@
 ---
-title: 执行上下文
+title: 执行上下文栈
 date: 2020-09-29 16:33:00
 permalink: /pages/990711/
 categories:
@@ -10,6 +10,8 @@ tags:
 ---
 
 ## 执行上下文
+
+代码运行时。会产生相应的执行环节。这个就是执行上下文
 
 在`JavaScript`中，执行上下文分为三种
 
