--- a/docs/15.JavaScript进阶/03.作用域和闭包/03.变量对象.md
+++ b/docs/15.JavaScript进阶/03.作用域和闭包/03.变量对象.md
@@ -10,7 +10,7 @@ tags:
 ---
 ## 前言
 
-在执行上下文中讲到。创建一个上下文后。拥有3个重要属性。分别是
+在[执行上下文栈](/pages/990711/)中讲到。创建一个上下文后。拥有3个重要属性。分别是
 
 - 变量对象
 - 作用域链
@@ -43,3 +43,13 @@ tags:
    每发现一个变量，就在`VO`中创建一个属性。并初始化为`undefined`。如果声明存在。则不进行处理
 
 ### 执行代码
+
+添加或修改`函数`或`变量`属性
+
+## 总结
+
+1. `变量对象`包含了当前作用域下的所有变量和函数
+2. 代码执行过程分为`进入阶段`和`执行阶段`
+   1. 在`进入阶段`。会初始化声明的`变量`和`函数`。这就是`变量提升`
+   2. 在`执行阶段`。会修改或添加`变量对象`中的属性
+3. 全局上下文中的变量对象就是`全局对象`
