--- a/docs/面试/03.HTML/01.2020-10.md
+++ b/docs/面试/03.HTML/01.2020-10.md
@@ -1,10 +1,8 @@
 ---
 title: 2020-10
 date: 2020-10-14 09:36:37
-permalink: /pages/615976/
 article: false
 categories:
   - 面试
-tags:
-  -
+permalink: /pages/90c7b8/
 ---
