--- a/docs/JavaScript进阶/03.作用域和闭包/09.作用域和作用域链.md
+++ b/docs/JavaScript进阶/03.作用域和闭包/09.作用域和作用域链.md
@@ -58,10 +58,10 @@ tags:
 在词法作用域中讲到。函数的作用域在定义的时候就决定了
 是因为函数内部有一个`[[scope]]`的属性，当函数被创建时。会保存所有的`父变量对象`。也就是除自己外的所有变量对象
 
-<<< @\codeSnippets\js\作用域.js#03
+<<< @/codeSnippets/js/作用域.js#03
 各自的`[[scope]]`：
 
-<<< @\codeSnippets\js\作用域.js#04
+<<< @/codeSnippets/js/作用域.js#04
 
 当函数被激活。进入函数上下文时。就会将当前的`活动对象`添加到作用域当中
 
@@ -73,7 +73,7 @@ scope = [[scope]].push([AO])
 
 ## 例子
 
-<<< @\codeSnippets\js\作用域.js#05
+<<< @/codeSnippets/js/作用域.js#05
 
 1. `checkScope`函数被创建。生成内部属性`[[scope]]`
 
