--- a/docs/数据结构和算法/01.数组.md
+++ b/docs/数据结构和算法/01.数组.md
@@ -16,16 +16,16 @@ tags:
 
 如果你要记录自己的体重。从下周一到周末。你可能会这样：
 
-<<< @\codeSnippets\数据机构\数组.js#01
+<<< @/codeSnippets/数据机构\数组.js#01
 如果你坚持锻炼了一段时间。则管理的难度加大。如果使用数组来存储数据。则可以更清晰的保存和读取信息
 
-<<< @\codeSnippets\数据机构\数组.js#02
+<<< @/codeSnippets/数据机构\数组.js#02
 
 ## 基本操作
 
 ### 创建和初始化
 
-<<< @\codeSnippets\数据机构\数组.js#03
+<<< @/codeSnippets/数据机构\数组.js#03
 
 ### 添加元素
 
