--- a/docs/面试/03.HTML/01.2020-10.md
+++ b/docs/面试/03.HTML/01.2020-10.md
@@ -6,3 +6,14 @@ categories:
   - 面试
 permalink: /pages/90c7b8/
 ---
+
+
+::: center
+
+## 如何在页面引用外部的html页面
+
+:::
+
+1. 如果是完整的页面。有`header`,有`body`,使用`iframe`
+2. 如果是页面片段。使用`js`加载
+3. link import
