--- a/docs/面试/07.JavaScript/01.2020-10.md
+++ b/docs/面试/07.JavaScript/01.2020-10.md
@@ -15,3 +15,11 @@ tags:
 :::
 
 <<< @/codeSnippets/3+1面试.js#02
+
+::: center
+
+## 使用js写个方法，使得数组的两个元素互换，要求高性能
+
+:::
+
+<<< @/codeSnippets/3+1面试.js#03
