--- a/docs/面试/05.CSS/01.2020-10.md
+++ b/docs/面试/05.CSS/01.2020-10.md
@@ -17,3 +17,27 @@ categories:
 
 1. 使用`text-stroke`
 2. 使用`text-shadow`
+
+::: center
+
+## 使用css实现模糊的效果
+
+:::
+
+::: demo 使用`filter`的`blur`属性
+
+```html
+<template>
+<div class='demo-container'>
+  <div class="blur">要模糊的内容</div>
+</div>
+</template>
+
+<style>
+.demo-container .blur{
+  filter:blur(1px)
+}
+</style>
+```
+
+:::
