--- a/docs/面试/07.JavaScript/01.2020-10.md
+++ b/docs/面试/07.JavaScript/01.2020-10.md
@@ -23,3 +23,13 @@ tags:
 :::
 
 <<< @/codeSnippets/3+1面试.js#03
+
+::: center
+
+## 使用js写一个方法，使得数组的某个元素置顶
+
+:::
+
+<a target="_blank" href="https://github.com/haizlin/fe-interview/issues/3089">前往原文</a>
+
+<<< @/codeSnippets/3+1面试.js#04
