--- a/docs/面试/03.HTML/01.2020-10.md
+++ b/docs/面试/03.HTML/01.2020-10.md
@@ -17,3 +17,15 @@ permalink: /pages/90c7b8/
 1. 如果是完整的页面。有`header`,有`body`,使用`iframe`
 2. 如果是页面片段。使用`js`加载
 3. link import
+
+::: center
+
+## html实现页面跳转都有哪些方法
+
+:::
+
+1. `<a>`标签的`href`
+
+2. 浏览器`history`对象
+3. 浏览器`location.href`
+4. `<meta http-equiv="refresh" content="5;url=other.html">`
