--- a/docs/博客建设/01.语法和容器.md
+++ b/docs/博客建设/01.语法和容器.md
@@ -8,8 +8,14 @@ tags:
   -
 ---
 
-::: theorem
+::: theorem 说明
 在写作过程中，经常翻阅`vuepress`和主题`vdoing`的文档配置，这里简单的记录下常用的配置，以及`markdown`的语法
+
+::: right
+[markdown扩展](https://vuepress.vuejs.org/zh/guide/markdown.html)
+
+[前往vuepress-theme-vdoing]()
+
 :::
 
 ## 语法
