--- a/docs/读书笔记/10.JavaScript高级程序设计/17.第17章 事件.md
+++ b/docs/读书笔记/10.JavaScript高级程序设计/17.第17章 事件.md
@@ -8,3 +8,87 @@ categories:
 tags:
   -
 ---
+
+## 事件流
+
+::: theorem 《JavaScript高级程序设计》
+ Web 浏览器（ IE4 和 Netscape Communicator 4）开始开发时，开发团队碰到了一个有意思
+的问题：页面哪个部分拥有特定的事件呢？要理解这个问题，可以在一张纸上画几个同心圆。把手指放
+到圆心上，则手指不仅是在一个圆圈里，而且是在所有的圆圈里。两家浏览器的开发团队都是以同样的
+方式看待浏览器事件的。当你点击一个按钮时，实际上不光点击了这个按钮，还点击了它的容器以及整
+个页面。
+:::
+如何理解呢，
+
+::: demo
+
+```html
+<template>
+<div class='demo-container' @click="onClick">
+<div class="wrap js-wrap">
+  <div class="content js-content">
+    <p class="p js-p">内容</p>
+  </div>
+</div>
+</div>
+</template>
+<script>
+export default {
+  methods:{
+    onClick(e){
+      let name = e.target.name
+
+    }
+  },
+
+}
+</script>
+<style>
+.wrap,.content,.p{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color:#fff;
+}
+  .wrap{
+    width:200px;
+    height:200px;
+    background: green;
+    position:relative;
+  }
+  .wrap::after{
+    content:"最外层元素";
+    position:absolute;
+    top:5px;
+
+  }
+  .content {
+    width:140px;
+    height:140px;
+    background: blue;
+    position:relative;
+  }
+  .content::after{
+    content:"父元素";
+    position:absolute;
+    top:5px;
+  }
+  .p{
+    width:80px;
+    height:80px;
+    background: red;
+  }
+</style>
+```
+
+:::
+
+### 事件冒泡和时间捕获
+
+## 事件处理程序
+
+- HTML处理程序
+- dom0事件处理程序
+- dom3事件处理程序
+
+## 事件对象
