--- a/docs/面试/03.HTML/01.2020-10.md
+++ b/docs/面试/03.HTML/01.2020-10.md
@@ -29,3 +29,11 @@ permalink: /pages/90c7b8/
 2. 浏览器`history`对象
 3. 浏览器`location.href`
 4. `<meta http-equiv="refresh" content="5;url=other.html">`
+
+::: center
+
+## HTML5的触屏事件有哪些
+
+:::
+
+<a target="_blank" href="https://github.com/haizlin/fe-interview/issues/3091">前往原文</a>
