--- a/docs/面试/05.CSS/01.2020-10.md
+++ b/docs/面试/05.CSS/01.2020-10.md
@@ -41,3 +41,24 @@ categories:
 ```
 
 :::
+
+::: center
+
+## font-weight的默认值是多少
+
+:::
+
+<a target="_blank" href="https://github.com/haizlin/fe-interview/issues/3092">前往原文</a>
+
+::: demo `font-weight`默认值是`normal`,而`normal`和`400`大致相当
+
+```html
+<template>
+<div class='demo-container'>
+  <p v-for="item,index in 9" :style="{'font-weight':`${(index+1) * 100}`}">font-weight:{{(index+1) * 100}} 示例文字 <span v-if="index === 3">(默认值)</span></p>
+</div>
+</template>
+
+```
+
+:::
