--- a/docs/面试/07.JavaScript/01.2020-10.md
+++ b/docs/面试/07.JavaScript/01.2020-10.md
@@ -33,3 +33,12 @@ tags:
 <a target="_blank" href="https://github.com/haizlin/fe-interview/issues/3089">前往原文</a>
 
 <<< @/codeSnippets/3+1面试.js#04
+
+::: center
+
+## 使用js按贝格尔编排算法生成单循环对阵表 <badge type="error" text="不会"/>
+
+某公司组织了一次羽毛球比赛，将多支参赛队伍放入一个小组，按贝格尔编排算法，生成参赛队伍的单循环对阵表
+:::
+
+<a target="_blank" href="https://github.com/haizlin/fe-interview/issues/3093">前往原文</a>
