--- a/docs/面试/07.JavaScript/01.2020-10.md
+++ b/docs/面试/07.JavaScript/01.2020-10.md
@@ -42,3 +42,38 @@ tags:
 :::
 
 <a target="_blank" href="https://github.com/haizlin/fe-interview/issues/3093">前往原文</a>
+
+::: center
+
+## 使用js如何改变url参数值，并且页面不刷新
+
+:::
+
+<a target="_blank" href="https://github.com/haizlin/fe-interview/issues/3097">前往原文</a>
+
+::: demo `location.hash`不会重载网页，并且会在浏览器历史记录中添加一条记录
+
+```vue
+<template>
+<div class='demo-container'>
+<el-button type="primary" @click="changeHash">点击改变url参数值</el-button>
+</div>
+</template>
+<script>
+export default {
+
+  methods:{
+    changeHash(){
+    location.hash = "注意地址栏"
+  }
+  }
+}
+</script>
+<style>
+.demo-container{
+
+}
+</style>
+```
+
+:::
