--- a/docs/面试/03.HTML/01.2020-10.md
+++ b/docs/面试/03.HTML/01.2020-10.md
@@ -37,3 +37,29 @@ permalink: /pages/90c7b8/
 :::
 
 <a target="_blank" href="https://github.com/haizlin/fe-interview/issues/3091">前往原文</a>
+
+::: center
+
+## 说说你对abbr标签的理解，它有什么含义？ <badge type="info" text="不清楚" />
+
+:::
+
+<a target="_blank" href="https://github.com/haizlin/fe-interview/issues/3099">前往原文</a>
+
+::: demo
+
+```html
+<template>
+<div class='demo-container'>
+<abbr title="abbr是英文单词abbreviation简写，也是缩写、略语的意思">鼠标移过来</abbr>
+</div>
+</template>
+
+```
+
+:::
+很简单。鼠标经过`<abbr>`标签时。会展示title中的缩略词内容。
+
+对于一些缩略词，像`ES6`,`CSS3`,`HTML5`等。特别是科技，编程类的文章。经常会不懂代表什么意思。作者也没有解释。
+
+`<abbr>`标签是一种合适的展示词语意思的方式
