--- a/docs/JavaScript进阶/20.防抖和节流.md
+++ b/docs/JavaScript进阶/20.防抖和节流.md
@@ -22,7 +22,7 @@ tags:
 
 ```html
 <template>
-<div class='demo-container' @mousemove="debounce" @mouseout="leave">
+<div class='demo-container first' @mousemove="handleMove" @mouseout="leave">
 {{count}}
 </div>
 </template>
@@ -34,17 +34,8 @@ export default {
     }
   },
   methods:{
-    debounce(){
-     let timeout
-     return function() {
-       clearTimeout(timeout)
-       timeout = setTimeout(this.handle(), 100);
-     }
-  },
-    handle(){
-
+    handleMove(){
         this.count++
-
     },
     leave(){
       this.$message({
@@ -57,7 +48,7 @@ export default {
 }
 </script>
 <style>
-.demo-container{
+.first{
   width:100%;
   height:300px;
   display:flex;
@@ -87,6 +78,8 @@ export default {
 
 如果在一个函数执行后的`规定时间`内重新触发了这个事件，那么以新的函数的触发事件为准。`规定时间`后执行
 
+实现第一版防抖
+
 ```js
 function debounce(func,wait){
   let timeout
@@ -96,3 +89,59 @@ function debounce(func,wait){
   }
 }
 ```
+
+效果：
+
+::: demo
+
+```html
+<template>
+<div class=' second' ref="second" >
+  {{count}}
+</div>
+</template>
+<script>
+
+export default {
+  data(){
+    return {
+      count:0,
+      timeOut:null
+    }
+
+  },
+  methods:{
+    debounce(func,wait){
+      let timeOut = this.timeOut
+      return function () {
+        clearTimeout(timeOut)
+        timeOut = setTimeout(() => {
+          func.apply(this,...arguments)
+        },wait );
+      }
+    },
+
+  },
+  mounted(){
+    this.$refs.second.addEventListener('mousemove',this.debounce(()=>{
+      this.count++;
+
+    }),500)
+  }
+}
+</script>
+<style>
+.second{
+  width:100%;
+  height:300px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color:#fff;
+  font-size:60px;
+  background:#7b8c7c
+}
+</style>
+```
+
+:::
