--- a/docs/面试/07.JavaScript/01.2020-10.md
+++ b/docs/面试/07.JavaScript/01.2020-10.md
@@ -77,3 +77,18 @@ export default {
 ```
 
 :::
+
+
+::: center
+
+## 一次JS的请求哪些地方会有缓存处理？
+
+
+:::
+
+<a target="_blank" href="https://github.com/haizlin/fe-interview/issues/3118">前往原文</a>
+
+- `DNS`缓存
+- `CDN`缓存
+- `浏览器`缓存
+- `服务器`缓存
