--- a/docs/vue3学习笔记/00.导读.md
+++ b/docs/vue3学习笔记/00.导读.md
@@ -25,7 +25,7 @@ tags:
 - name: Vue3.x从入门到实战
   desc: 技术胖
   avatar: https://cdn.jsdelivr.net/gh/Gorvey/image_store/blog/c81969907b5c286b50d02400e7d54b13595f09bb.jpg@50w_50h.webp
-  link: https://jspang.com/detailed?id=64#toc234
+  link: https://jspang.com/detailed?id=64#toc234---
   bgColor: '#ffee'
   textColor: '#6F9AFF'
 
