--- a/docs/读书笔记/20.《CSS选择器世界》/02.第二章、优先级.md
+++ b/docs/读书笔记/20.《CSS选择器世界》/02.第二章、优先级.md
@@ -17,92 +17,41 @@ tags:
 
 ## css优先级规则
 
-优先级从低到高排序
+![优先级](https://cdn.jsdelivr.net/gh/Gorvey/image_store/blog/css%E9%80%89%E6%8B%A9%E5%99%A8%E4%BC%98%E5%85%88%E7%BA%A7.png)
 
-- 通配符`*`，选择符，逻辑伪类
-
-   ```css
-    //通配符
-    * {
-      css rule
-     }
-     //选择符
-     +，>,~，空格和||
-     //逻辑组合伪类
-     //这一部分不影响优先级。里面的选择器影响
-     :not()
-     :is()
-     :where()
-   ```
-
-- 标签选择器
-
-  ```css
-  body{}
-  div{}
-  ```
-
-- 类选择器，属性选择器和伪类
-
-  ```css
-    .class{}
-    [class="class"]
-    :hover{}
-  ```
-
-- ID选择器
-
-  ```css
-    #id {}
-  ```
-
-- HTML内联style
-::: demo
-
-```html
-<template>
-<div style="font-weight:bold;color:blue">
-  内联样式
-</div>
-</template>
-
-```
-
-:::
-
-- `!important`
-::: demo
-  
-```html
-  <template>
-  <div class='demo-container' style="font-weight:bold;color:blue">
-    <p class="text">没有使用important</p>
-    <p class="text important">使用了important</p>
-
-  </div>
-  </template>
-  <script>
-  export default {
-  }
-  </script>
-  <style>
- .important{
-    color:#4CA1FE !important
-  }
- </style>
-```
-
-:::
-唯一的使用场景是重置`JavaScript`设置的样式
-
-```css
-.class[style*='color:blue']{
-  color:yellow;
-}
-```
-
-::: danger 注意
-请勿滥用`important`，这会造成调试困难和布局脆弱
-:::
+其中0-3级属于css选择器的最复杂的一部分。学会这部分等于学会了完整的css优先级
 
 ## 深入优先级规则
+
+目前普遍采用的数值计数法。即每一段css语句中的选择器对应一个具体的数值。数值越大优先级越高
+
+- 0级选择器，优先级为0
+- 1级选择器，优先级为1
+- 3级选择器，优先级为10
+- 3级选择器，优先级为100
+
+### 增加css优先级的技巧
+
+1. 重复选择器自身
+
+```css
+.foo{}
+
+/* 重复自身 */
+.foo.foo{}
+```
+
+2. 借助必然出现的属性
+
+```css
+.foo[class]{}
+#foo[id]{}
+```
+
+### 计数法的不足
+
+不同等级的选择器无法跨越
+
+上面说到的1级选择器权重为1，二级为10，如果有11个1级选择器会超过一个二级选择器吗？
+
+但是并不会出现这种情况。并且开发时也不会出现十多个选择器的情况
