--- a/docs/读书笔记/20.《CSS选择器世界》/03.第三章、命名.md
+++ b/docs/读书笔记/20.《CSS选择器世界》/03.第三章、命名.md
@@ -8,3 +8,67 @@ categories:
 tags:
   - 
 ---
+
+## 基础特性
+
+### 是否区分大小写
+
+::: demo
+
+```html
+<template>
+<div class='demo-container testNamed'>
+<span class="test">测试css命名是否区分大小写</span>
+</div>
+</template>
+<script>
+export default {
+}
+</script>
+<style>
+.testNamed SPAN{
+  background-color:yellow;
+}
+.testNamed [CLASS]{
+  color:blue
+}
+.textNamed .test{
+  font-weight:bold;
+}
+</style>
+```
+
+:::
+
+html字符全部小写，3个选择器全部大写。而选择器`SPAN,[CLASS]`都生效，`.CLASS`没有生效
+
+因为html中标签和属性不区分大小写。而属性值区分。而类选择器和ID选择器都属于属性值。因此区分
+
+但是，各大浏览器支持属性选择器不分区大小写。因此严格意义上没有对大小写敏感的选择器了
+
+::: demo
+
+```html
+<template>
+<div class='demo-container testNewFeature'>
+<span class="test">测试命名不区分大小写新特性</span>
+</div>
+</template>
+<style>
+.testNewFeature SPAN{
+  background-color:yellow;
+}
+.testNewFeature [CLASS]{
+  color:blue
+}
+.testNewFeature [CLASS~=TEST i]{
+  font-weight:bold;
+}
+</style>
+```
+
+:::
+
+### 合法的命名
+
+## 如何命名
