--- a/docs/读书笔记/20.《CSS选择器世界》/04.第四章，选择符.md
+++ b/docs/读书笔记/20.《CSS选择器世界》/04.第四章，选择符.md
@@ -8,3 +8,15 @@ categories:
 tags:
   - 
 ---
+
+## 选择符目前只有下面这5个
+
+- 后代选择符`空格（ ）`
+- 子元素选择符`>`
+- 相邻兄弟选择符`+`
+- 随后兄弟选择符`~`
+- 列选择符`||`
+  
+## 后代选择符( )
+
+ 
