--- a/docs/读书笔记/10.JavaScript高级程序设计/12.第12章 BOM.md
+++ b/docs/读书笔记/10.JavaScript高级程序设计/12.第12章 BOM.md
@@ -1,7 +1,7 @@
 ---
 title: 第12章 BOM
 date: 2020-10-22 16:30:33
-permalink: /pages/064668/
+permalink: /pages/064678/
 categories:
   - 读书笔记
   - JavaScript高级程序设计
@@ -58,10 +58,10 @@ devicePixelRatio
 export default {
   data(){
     return {
-      innerHeight,
-      innerWidth,
-      outerHeight,
-      outerWidth,
+      // innerHeight,
+      // innerWidth,
+      // outerHeight,
+      // outerWidth,
     }
   },
 
